code/compiler/test/analysis/diagnostics_input_tests/global_access.c.diag
Error: [Basic] Write access to global
                from: "main"
<input_filepath>@4:5-4:9
    x = 5;
    ^~~~~
Error: [Basic] Read access to global
                from: "main"
<input_filepath>@5:13
    int y = x;
            ^
